table header icon placement safari fix
in safari when user clicks on a different header the arrow was overlapping on the text. this commit fixes the issue.

needed to add the right property again on sort asc which has the transform rotate property as well

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -135,6 +135,7 @@ table {
         }
       }
       &.sort-asc span:after {
+        right: -5px;
         transform: translateY(-50%) rotate(180deg);
       }
       &.sort-desc {}
